<resources>
    <string name="app_name">ReMed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de usuario</string>
    <string name="nav_header_subtitle">usuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usuario_hint">Correo electrónico</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="ingresar_hint">Iniciar sesión</string>
    <string name="registrar_hint">Regístrate</string>
    <string name="q_regitrar_hint">¿No tienes una cuenta?</string>
    <string name="olvidar_contrasenaf">¿Olvidaste tu contraseña?</string>
    <string name="regitrar_hint">REGISTRATE</string>

    <string name="conf_contrasena_hint">Confirmar contraseña</string>
    <string name="name_hint">Nombre completo</string>
    <string name="telefono">Teléfono</string>
    <string name="curp">CURP</string>
    <string name="elige">Elige</string>
    <string name="esp">Especialidad</string>
    <string name="dom">Domicilio</string>
    <string name="cel">Cédula</string>

</resources>
