<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="50dp"
        android:layout_above="@+id/textoUsuario"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/remedicon" />

    <EditText
        android:id="@+id/textoUsuario"
        android:layout_width="340dp"
        android:layout_height="44dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/textoContrasena"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_correo"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/usuario_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:drawableStart="@drawable/ic_correo" />

    <EditText
        android:id="@+id/textoContrasena"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_contrasena"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contrasena_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_contrasena" />


    <Button
        android:id="@+id/btnOk"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textoUsuario"
        android:layout_below="@+id/botonOlvidar"
        android:background="@drawable/bg_verde_redondo"
        android:text="@string/ingresar_hint"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:layout_alignLeft="@+id/textoUsuario" />


    <Button
        android:id="@+id/botonOlvidar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textoUsuario"
        android:layout_below="@+id/textoContrasena"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:text="@string/olvidar_contrasenaf"
        android:textAllCaps="false"
        android:textColor="@color/colorNegro2"
        android:textSize="16dp"
        android:layout_alignLeft="@+id/textoUsuario"
        android:layout_alignRight="@+id/textoUsuario" />


    <TextView
        android:id="@+id/textViewNuevo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textoUsuario"
        android:text="@string/q_regitrar_hint"
        android:textColor="@color/colorNegro2"
        android:textSize="16dp"
        android:layout_marginVertical="15dp"
        android:textAllCaps="false"
        android:layout_alignLeft="@+id/textoUsuario" />

    <Button
        android:id="@+id/botonRegistra"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewNuevo"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textoUsuario"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:text="@string/regitrar_hint"
        android:textAllCaps="false"
        android:textColor="@color/colorNegro2"
        android:textSize="16dp" />


</RelativeLayout>