<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroPaciente">

    <EditText
        android:id="@+id/txtCorreoSignUp"
        android:layout_width="340dp"
        android:layout_height="44dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_correo"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/usuario_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:drawableStart="@drawable/ic_correo" />

    <EditText
        android:id="@+id/txtContraSignUp"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtCorreoSignUp"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_contrasena"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/contrasena_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_contrasena" />

    <EditText
        android:id="@+id/txtContra2SignUp"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtContraSignUp"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_contrasena"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/conf_contrasena_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_contrasena" />

    <EditText
        android:id="@+id/txtNameSignUp"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtContra2SignUp"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_usuario"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_usuario" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtNameSignUp"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_telefono"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_telefono" />

    <EditText
        android:id="@+id/txtCurp"
        android:layout_width="340dp"
        android:layout_height="43dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txtTelefono"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableLeft="@drawable/ic_keyboard_right_arrow_button"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/curp"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_keyboard_right_arrow_button" />

    <EditText
        android:id="@+id/txtFechaNac"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:layout_below="@+id/txtCurp"
        android:layout_alignLeft="@+id/txtCorreoSignUp"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_blanco_redondo"
        android:drawableStart="@drawable/ic_calendar"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/colorNegro"
        android:textColorHint="@color/colorNegro"
        android:textSize="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCurp"
        android:layout_alignStart="@+id/txtCorreoSignUp"
        android:layout_alignLeft="@+id/txtCorreoSignUp"
        android:layout_marginStart="256dp"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_verde_redondo"
        android:text="@string/elige"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="16dp"
        android:visibility="visible" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtCorreoSignUp"
        android:layout_below="@+id/txtFechaNac"
        android:background="@drawable/bg_verde_redondo"
        android:text="@string/registrar_hint"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="16dp"
        android:layout_marginTop="30dp"
        android:visibility="visible"
        android:layout_alignLeft="@+id/txtCorreoSignUp" />

</RelativeLayout>